# lastfm_mp3_with_tags

./: .gitignore  License.md  README.md  __main__.py  api.py  pyproject.toml  requirements.txt
lastmp3/: __main__.py  api.py  metadata.py
